--- a/custom_bi_car_repair/report/car_diagnosys.xml
+++ b/custom_bi_car_repair/report/car_diagnosys.xml
@@ -2,31 +2,31 @@
 
 <odoo>
 	<data>
-        <template id="car_diagnosys_temp_id">
+        <template id="maintenance_template_view_temp_id">
 			<t t-call="web.html_container">
 				<t t-foreach="docs" t-as="doc">
-					<t t-call="custom_bi_car_repair.car_diagnosys_template_view" />
+					<t t-call="custom_bi_car_repair.maintenance_template_view" />
 				</t>
 			</t>
 		</template>
-        <record id="car_diagnsys_report_id" model="ir.actions.report">
+        <record id="manintenance_request_report_id" model="ir.actions.report">
             <field name="name">imprimir OT</field>
-            <field name="model">car.diagnosys</field>
+            <field name="model">maintenance.request</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">custom_bi_car_repair.car_diagnosys_temp_id</field>
-            <field name="report_file">custom_bi_car_repair.car_diagnosys_temp_id</field>
+            <field name="report_name">custom_bi_car_repair.maintenance_template_view_temp_id</field>
+            <field name="report_file">custom_bi_car_repair.maintenance_template_view_temp_id</field>
             <field name="binding_type">report</field>
-            <field name="binding_model_id" ref="model_car_diagnosys"/>
+            <field name="binding_model_id" ref="model_maintenance_request"/>
 
         </record>
 
-		<template id="car_diagnosys_template_view">
+		<template id="maintenance_template_view">
 			<t t-call="web.external_layout">
                 <t t-set="o" t-value="doc.with_context({'lang':doc.partner_id.lang})"/>
                 <div class="header" style="border: hidden;">
                     <header>
                         <div class="col-6">
-                            <img t-if="o.car_repair_id.company_id.logo" t-att-src="image_data_uri(o.car_repair_id.company_id.logo)" style="max-height: 45px;" alt="Logo" />
+                            <img t-if="o.company_id.logo" t-att-src="image_data_uri(o.company_id.logo)" style="max-height: 45px;" alt="Logo" />
                         </div>
                         
                     </header>
@@ -34,34 +34,38 @@
 				<div class="page">
                     <div class="row">
                         <div class="col-8" style="font-size:18px;">
-                            <strong>ORDEN DE TRABAJO # <span t-field="o.car_repair_id.sequence" /></strong> 
+                            <strong>ORDEN DE TRABAJO # <span t-field="o.name" /></strong> 
                          </div>
                     </div>
                     <br/>
                    <div class="row">
                     <div class="col-8" >
-                       <strong>Cliente</strong>
+                       <strong><i class="fa fa-user" aria-hidden="true"></i> Cliente</strong>
                        <br/>
-                       Empresa: <span t-field="o.car_repair_id.partner_id.name" />
+                       Empresa: <span t-field="o.partner_id.name" />
                        <br/>
-                       RUT: <span t-field="o.car_repair_id.partner_id.vat" />
+                       RUT: <span t-field="o.partner_id.vat" />
                        <br/>
-                       Telefono: <span t-field="o.car_repair_id.partner_id.phone0" />
+                       Telefono: <span t-field="o.partner_id.phone0" />
                        <br/>
-                       Direccion: <span t-field="o.car_repair_id.partner_id.street" />
+                       Direccion: <span t-field="o.partner_id.street" />
                     </div>
                     <div class="col-4">
+
                         <strong>
-                            Vehículo
+                            <i class="fa fa-car" aria-hidden="true"></i>    Vehículo
                         </strong>
                         <br/>
-                        <span t-field="o.car_repair_id.model" /> <span t-field="o.car_repair_id.brand" /> <span t-field="o.car_repair_id.year" />
+                        <span t-field="o.model" /> <span t-field="o.brand" /> <span t-field="o.year" />
                         <br/>
-                        Matricula: <span t-field="o.car_repair_id.license_plate" />
+                        Matricula: <span t-field="o.license_plate" />
                         <br/>
-                        Color: <span t-field="o.car_repair_id.color" />
+                        Color: <span t-field="o.color" />
                         <br/>
-                        Kilometraje: <span t-field="o.car_repair_id.fleet_id.odometer" />
+                        <t t-if="o.odometer">
+                            Kilometraje: <span t-field="o.odometer" />
+                        </t>
+                        
 
 
                     </div>
@@ -69,9 +73,11 @@
                    <br/>
                    <div class="row">
                     <div class="col-8">
-                        <strong>Falla:</strong> <span t-field="o.car_repair_id.problem" />
+                        <i class="fa fa-wrench" aria-hidden="true"></i>
+                        <strong>Falla:</strong> <span t-field="o.description" />
                         <br/>
-                        <strong>Estado:</strong> <span t-field="o.car_repair_id.damage" />
+                        <i class="fa fa-heartbeat" aria-hidden="true"></i>
+                        <strong>Estado vehiculo:</strong> <span t-raw="o.observations"/>
 
                     </div>
                     <div class="col-4"></div>
@@ -86,25 +92,30 @@
                                 Mano de obra
                             </th>
                             <th>
-                                Cantidad
+                                
                             </th>
                             <th>
-                                Valor
+                                
                             </th>
                         </tr>
                         </thead>
                         <tbody>
-                            <t t-foreach="o.timesheet_ids" t-as="line">
+                            <t t-foreach="o.maintenance_line_services" t-as="line">
+                                <tr style="text-align:center;">
+                                    <td>
+                                        <span t-field="line.description"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="line.quantity"/> Hrs
+                                    </td>
+                                    <td>
+                                       $ <span t-field="line.price"/>
+                                    </td>
+                                </tr>
                                 <tr>
-                                    <td>
-                                        <span t-field="line.name"/>
-                                    </td>
-                                    <td>
-                                        <span t-field="line.unit_amount"/> Hrs
-                                    </td>
-                                    <td>
-                                       $ <span t-field="line.total_cost"/>
-                                    </td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
 
                             </t>
@@ -117,21 +128,19 @@
                         <thead class="thead-light">
                         <tr>
                             <th>
-                                Productos o repuestos
+                                Insumos
                             </th>
-                            <th>
-                                Cantidad
-                            </th>
-                            <th>
-                                Valor
-                            </th>
+                            <th></th>
+                            <th></th>
+                           
+                            
                         </tr>
                         </thead>
                         <tbody>
-                            <t t-foreach="o.car_repair_estimation_ids" t-as="lines">
-                                <tr>
+                            <t t-foreach="o.maintenance_line_products" t-as="lines">
+                                <tr style="text-align:center;">
                                     <td>
-                                        <span t-field="lines.product_id.name"/>
+                                        <span t-field="lines.description"/>
                                     </td>
                                     <td>
                                         <span t-field="lines.quantity"/>
@@ -145,7 +154,46 @@
                             
                         </tbody>
                     </table>
+                    
                    </div>
+                   <br/>
+                   <br/>
+                   
+                
+                   
+                
+                </div>
+                <div class="footer">
+                    <footer>
+                        <div class="row">
+                            <div class="firma" style="text-align:justify; font-size:16px;margin-left:50px;">
+                                <div class="texto_firma" style="border-bottom: 1px solid #000; width:300px;">
+        
+                                </div>
+                                <br/>
+                                <p style="font-weight: bold;">
+                                    <span t-esc="o.user_id.name" /><br/>
+                                    KLUG SERVICIOS SPA
+                                </p>
+        
+                            </div>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <div class="firmados" style="text-align:justify; font-size:16px;margin-left:50px;">
+                                <div class="texto_firmados" style="border-bottom: 1px solid #000; width:300px;">
+        
+                                </div>
+                                <br/>
+                                <p style="font-weight: bold;">
+                                    <span t-esc="o.partner_id.name" /><br/>
+                                    RUT. <span t-esc="o.partner_id.vat" />
+                                </p>
+        
+                            </div>
+                        </div>
+                       </footer>
                 </div>
             </t>
         </template>
