--- a/custom_bi_car_repair/views/sale_order_view.xml
+++ b/custom_bi_car_repair/views/sale_order_view.xml
@@ -30,14 +30,16 @@
 
 
                 <xpath expr="//field[@name='payment_term_id']" position="after">
-                    <field name="type_sale"/>
+                    <field name="type_sale" attrs="{'invisible': [('company_id', '!=', 3)]}"/>
                     <field name="fleet" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                     <field name="brand" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                     <field name="model" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                     <field name="license_plate" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                     <field name="responsible_id"/>
                 </xpath>
-               
+                <xpath expr="//button[@name='action_confirm']" position="attributes">
+                    <attribute name="attrs">{'invisible': [('type_sale', '!=', 'normal_sale_order')]}</attribute>
+                </xpath>
                 <xpath expr="//field[@name='agreement_id']" position="attributes">
                     <attribute name="attrs">{'invisible': [('type_sale', '!=', 'normal_sale_order')]}</attribute>
                 </xpath>
