--- a/custom_bi_car_repair/views/maintenance_view.xml
+++ b/custom_bi_car_repair/views/maintenance_view.xml
@@ -18,6 +18,7 @@
                     <field name="fleet"/>
                     
                 </xpath>
+                
             </field>
         </record>
 
@@ -42,9 +43,12 @@
 
 
                 </xpath>
+                <xpath expr="//field[@name='close_date']" position="attributes">
+                    <attribute name="string" >Fecha Liquidación</attribute>
+                </xpath>
                 <xpath expr="//field[@name='request_date']" position="before">
                     <field name="partner_id" string="Cliente" />
-                    <field name="street" string="Direccion alternativa" />
+                    <field name="street" string="Lugar de reparación" />
                     
                 </xpath>
                 <xpath expr="//field[@name='company_id']" position="after">
@@ -56,7 +60,7 @@
 
                 </xpath>
                 <xpath expr="//field[@name='description']" position="attributes">
-                    <attribute name="string">Falla</attribute>
+                    <attribute name="string">Diagnóstico</attribute>
                 </xpath>
                 <xpath expr="//field[@name='employee_id']" position="attributes">
                     <attribute name="invisible">1</attribute>
@@ -103,7 +107,7 @@
                             
 
                         </page>
-                        <page string="Insumos" name="supplies">
+                        <page string="Repuestos" name="supplies">
                             <field name="maintenance_line_products" mode="tree,kanban">
                                 <tree string="Insumos" editable="bottom">
                                     <field name="product_id" />
@@ -122,7 +126,7 @@
 
 
                         </page>
-                        <page string="observaciones" name="data_check">
+                        <page string="Observaciones" name="data_check">
                             <group>
                                 
                                     <field name="observations" widget="html" />
