--- a/custom_bi_car_repair/report/car_diagnosys.xml
+++ b/custom_bi_car_repair/report/car_diagnosys.xml
@@ -2,56 +2,245 @@
 
 <odoo>
 	<data>
-        <template id="car_diagnosys_temp_id">
+        <template id="maintenance_template_view_temp_id">
 			<t t-call="web.html_container">
 				<t t-foreach="docs" t-as="doc">
-					<t t-call="custom_bi_car_repair.car_diagnosys_template_view" />
+					<t t-call="custom_bi_car_repair.maintenance_template_view" />
 				</t>
 			</t>
 		</template>
-        <record id="car_diagnsys_report_id" model="ir.actions.report">
+        
+        <record id="manintenance_request_report_id" model="ir.actions.report">
             <field name="name">imprimir OT</field>
-            <field name="model">car.diagnosys</field>
+            <field name="model">maintenance.request</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">custom_bi_car_repair.car_diagnosys_temp_id</field>
-            <field name="report_file">custom_bi_car_repair.car_diagnosys_temp_id</field>
+            <field name="report_name">custom_bi_car_repair.maintenance_template_view_temp_id</field>
+            <field name="report_file">custom_bi_car_repair.maintenance_template_view_temp_id</field>
             <field name="binding_type">report</field>
-            <field name="binding_model_id" ref="model_car_diagnosys"/>
+            <field name="binding_model_id" ref="model_maintenance_request"/>
 
         </record>
 
-		<template id="car_diagnosys_template_view">
+        
+
+		<template id="maintenance_template_view">
 			<t t-call="web.external_layout">
                 <t t-set="o" t-value="doc.with_context({'lang':doc.partner_id.lang})"/>
-                <div class="header" style="border: hidden;">
-                    <header>
-                        <div class="col-6">
-                            <img t-if="o.car_repair_id.company_id.logo" t-att-src="image_data_uri(o.car_repair_id.company_id.logo)" style="max-height: 45px;" alt="Logo" />
-                        </div>
-                        
-                    </header>
-                </div>
+                
 				<div class="page">
+                    <div class="row">
+                        <div class="col-8" style="font-size:18px;">
+                            <strong>LIQUIDACION ORDEN DE TRABAJO # <span t-field="o.name" /></strong> 
+                         </div>
+                    </div>
+                    <br/>
                    <div class="row">
-                    <div class="col-8" style="font-size:18px;">
-                       <strong>ORDEN DE TRABAJO # <span t-field="o.car_repair_id.sequence" /></strong> 
+                    <div class="col-4" >
+                       <strong><i class="fa fa-user" aria-hidden="true"></i> Cliente</strong>
+                       <br/>
+                       Empresa: <span t-field="o.partner_id.name" />
+                       <br/>
+                       RUT: <span t-field="o.partner_id.vat" />
+                       <br/>
+                       Telefono: <span t-field="o.partner_id.phone0" />
+                       <br/>
+                       Direccion: <span t-field="o.partner_id.street" />
+                       <br/>
+                       Lugar de reparación: <span t-field="o.street" />
+                    </div>
+                    <div class="col-4" style="text-align:right;">
+                        <img t-if="o.image_brand" t-att-src="image_data_uri(o.image_brand)" style="max-height: 45px;" alt="logo_brand" />
                     </div>
                     <div class="col-4">
+                        
                         <strong>
-                            Vehículo
+                            <i class="fa fa-car" aria-hidden="true"></i>    Vehículo
                         </strong>
                         <br/>
-                        <span t-field="o.car_repair_id.model" /> <span t-field="o.car_repair_id.brand" /> <span t-field="o.car_repair_id.year" />
+                        <span t-field="o.model" /> <span t-field="o.brand" /> <span t-field="o.year" />
                         <br/>
-                        Matricula: <span t-field="o.car_repair_id.license_plate" />
+                        Matricula: <span t-field="o.license_plate" />
                         <br/>
-                        Color: <span t-field="o.car_repair_id.color" />
+                        Color: <span t-field="o.color" />
                         <br/>
-                        Kilometraje: 
+                        <t t-if="o.odometer">
+                            Kilometraje: <span t-field="o.odometer" />
+                        </t>
+                        <br/>
+                        Fecha Creación Orden: <span t-field="o.request_date" />
+                        <br/>
+                        Fecha Liquidación: <span t-esc="o.close_date.strftime('%d/%m/%Y')"/>
+                        
 
 
                     </div>
                    </div>
+                   <br/>
+                   <div class="row">
+                    <div class="col-12">
+                        <i class="fa fa-wrench" aria-hidden="true"></i>
+                        <strong>Diagnóstico:</strong> <span t-field="o.description" />
+                        <br/>
+                        <i class="fa fa-heartbeat" aria-hidden="true"></i>
+                        <strong>Observaciones:</strong> <span t-raw="o.observations"/>
+
+                    </div>
+                    
+                   </div>
+                   <br/>
+                   <br/>
+                   <div class="row">
+                    <table class="table table-borderless" style="max-height:14px;">
+                        <thead>
+                        <tr style="border-bottom: solid 1px;max-height:14px;">
+                            <th>
+                                Servicios Realizados
+                            </th>
+                            <th>
+  
+                            </th>
+                            <th></th>
+                            <th>
+                                <span t-field="o.total_price_services"/>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            <t t-foreach="o.maintenance_line_services" t-as="line">
+                                <tr style="text-align:left;">
+                                    <td style="width:25%;padding:0px;">
+                                        <span t-field="line.description"/>
+                                    </td>
+                                    <td style="width:25%;padding:0px;">
+                                        <span t-field="line.quantity"/> 
+                                    </td>
+                                    <td style="width:25%;padding:0px;">
+                                        $ <span t-field="line.price"/>
+                                    </td>
+                                    <td style="width:25%;padding:0px;">
+                                        $ <span t-field="line.total_subtotal_line_services"/>
+                                    </td>
+                                </tr>
+                                
+
+                            </t>
+                            
+                        </tbody>
+                    </table>
+                </div>
+                <div class="row">
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr style="border-bottom: solid 1px;">
+                            <th>
+                                Repuestos Utilizados
+                            </th>
+                            <th></th>
+                            <th></th>
+                            <th><span t-field="o.total_price_products"/></th>
+                           
+                            
+                        </tr>
+                        </thead>
+                        <tbody>
+                            <t t-foreach="o.maintenance_line_products" t-as="lines">
+                                <tr style="text-align:left;">
+                                    <td style="width:25%;padding:0px;">
+                                        <span t-field="lines.description"/>
+                                    </td>
+                                    <td style="width:25%;padding:0px;">
+                                        <span t-field="lines.quantity"/>
+                                    </td>
+                                    <td style="width:25%;padding:0px;">
+                                       $ <span t-field="lines.price"/>
+                                    </td>
+                                    <td style="width:25%;padding:0px;">
+                                      $  <span t-field="lines.total_subtotal_line_product"/>
+                                    </td>
+                                </tr>
+
+                            </t>
+                            
+                        </tbody>
+                    </table>
+                    
+                   </div>
+                   <br/>
+                   <div class="row">
+                   
+                    <div class="col-6"></div>
+                   <div class="col-6" style="text-align:right;">
+                    <table class="table table-borderless">
+                        <tr>
+                            <td style="padding:0px;">
+                                Subtotal
+                            </td>
+                            <td style="padding:0px;">
+                                $ <span t-field="o.total_neto"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding:0px;">
+                                IVA 19%
+                            </td>
+                            <td style="padding:0px;">
+                                $ <span t-field="o.total_tax"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding:0px;">Total:</td>
+                            <td style="padding:0px;">
+                               <strong>$ <span t-field="o.total_tax_incluide"/>
+                            </strong>
+                            </td>
+                        </tr>
+                    </table>
+                    
+                   </div>
+                               
+                            
+                           
+                            
+                        
+                   </div>
+                   <br/>
+                   <br/>
+                   
+                
+                   
+                
+                </div>
+                <div class="footer">
+                    <footer>
+                        <div class="row">
+                            <div class="firma" style="text-align:justify; font-size:16px;margin-left:50px;">
+                                <div class="texto_firma" style="border-bottom: 1px solid #000; width:300px;">
+        
+                                </div>
+                                <br/>
+                                <p style="font-weight: bold;">
+                                    <span t-esc="o.user_id.name" /><br/>
+                                    KLUG SERVICIOS SPA
+                                </p>
+        
+                            </div>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <div class="firmados" style="text-align:justify; font-size:16px;margin-left:50px;">
+                                <div class="texto_firmados" style="border-bottom: 1px solid #000; width:300px;">
+        
+                                </div>
+                                <br/>
+                                <p style="font-weight: bold;">
+                                    <span t-esc="o.partner_id.name" /><br/>
+                                    RUT. <span t-esc="o.partner_id.vat" />
+                                </p>
+        
+                            </div>
+                        </div>
+                       </footer>
                 </div>
             </t>
         </template>
