--- a/custom_bi_car_repair/views/maintenance_view.xml
+++ b/custom_bi_car_repair/views/maintenance_view.xml
@@ -2,6 +2,8 @@
 <odoo>
 
     <data>
+
+        <!-- View Calendar  -->
         <record id="maintenance_request_calendar_inh_view" model="ir.ui.view">
             <field name="name">maintenance.request.calendar.inh.view</field>
             <field name="model">maintenance.request</field>
@@ -10,6 +12,7 @@
                 <xpath expr="//field[@name='maintenance_type']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
+                
                 <xpath expr="//field[@name='priority']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
@@ -23,12 +26,15 @@
             </field>
         </record>
 
-
+        <!-- View Form -->
         <record id="maintenance_request_inh_view" model="ir.ui.view">
             <field name="name">maintenance.request.inh.view</field>
             <field name="model">maintenance.request</field>
             <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form" />
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='user_id']" position="attributes">
+                    <attribute name="string">Técnico Responsable</attribute>
+                </xpath>
                 <xpath expr="//button[@name='archive_equipment_request']" position="after">
                     <button string="Crear Factura" attrs="{'invisible': [('stage_id', '!=', 3)]}" name="create_account" type="object" class="btn-primary" />
                     <button name="consume_car_parts" attrs="{'invisible': [('stage_id', '!=', 3)]}" string="Rebajar Inventario" type="object" class="btn-primary" />
