--- a/subscription_agreement/views/subscription_view.xml
+++ b/subscription_agreement/views/subscription_view.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<!-- <?xml version='1.0' encoding='utf-8'?>
 <odoo>
     <data>
         <record id="subscription_agreement_view_form" model="ir.ui.view">
@@ -6,11 +6,9 @@
             <field name="model">sale.subscription</field>
             <field name="inherit_id" ref="sale_subscription.sale_subscription_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//page[@id='lines']" position="inside">
-                    hola
-                </xpath>
                 
-                <!--                
+                
+                                
                 <xpath expr="//page[@id='lines']" position="after">
                     <page name="vehicle" string="Datos Vehiculo">
                         <group>
@@ -57,7 +55,7 @@
                         </group>
                         
                     </page>
-                </xpath> -->
+                </xpath>
             </field>
         </record>
         
@@ -68,4 +66,4 @@
     
     </data>
     
-</odoo>
+</odoo> -->
